--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,12 @@ dependencies {
     // ViewModel, LiveData
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycle_version"
+
+    //card view
+    implementation "androidx.cardview:cardview:1.0.0"
+
+    //Recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
 }
