--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ android {
 dependencies {
     def retrofitVersion = "2.9.0";
     def lifecycle_version = "2.3.1"
+    def glideVersion = "4.12.0"
 
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -55,4 +56,8 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glideVersion"
 }
