--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
 
     // (Optional) If you need "Parameterized Tests"
     testImplementation "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+
+    // MockWebServer
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
 }
